[package]
name = "moqt"
version = "0.0.1"
authors = ["yngrtc <y@ngr.tc>"]
edition = "2021"
description = "Media over QUIC - Transport"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/moqt"
homepage = "https://moq.rs"
repository = "https://github.com/moq-rs/moq"

[dependencies]
bytes = "1.6.0"
thiserror = "2.0.4"
log = "0.4.22"
retty = "0.29.0"

[dev-dependencies]
rstest = "0.23.0"