[package]
name = "moqt"
version = "0.0.1"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2021"
description = "Media over QUIC - Transport"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/moqt"
homepage = "https://moq.rs"
repository = "https://github.com/moq-rs/moq"

[dependencies]
sansio = "1.0.1"
bytes = "1.11.1"
thiserror = "2.0.18"
log = "0.4.29"

[dev-dependencies]
rstest = "0.26.1"
